fix: cannot hide overflow text

--- a/src/styles/tag-view.css
+++ b/src/styles/tag-view.css
@@ -16,8 +16,8 @@
 
 .tags-left-column {
 	width: 250px;
-	min-width: 200px;
-	max-width: 300px;
+	min-width: 300px;
+	max-width: 400px;
 	display: flex;
 	flex-direction: column;
 	border-right: 1px solid var(--background-modifier-border);
